--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                                        <i class="fa fa-arrow-right"></i>
                                    </div>
                                    <div class="p-4 align-self-end">
-                                      <p>When I'm not coding you can see me doing improv comedy in NY or getting nerdy at a comiccon. </p>
+                                      <p>When I'm not coding you can see me doing improv comedy in NY or getting nerdy at a comic-con. </p>
                                    </div>
                                </div>
                             
@@ -127,36 +127,36 @@
                 <article>
                 <a href="#" class="image fit thumb"><img src="img/archequipment_thumbnail.png" alt="" /></a>
                 <h3>Arch Equipment</h3>
-                <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-                <a href="#" class="btn btn-outline-danger">View Project</a>
-                <a href="#" class="btn btn-danger">View Code</a>
+                <p>Hottest equipment for contractors and enthusiast. New and Used.</p>
+                <a href="https://georgechristopherlopez.github.io/arch-equipment/" class="btn btn-outline-danger">View Project</a>
+                <a href="https://github.com/GeorgeChristopherLopez/arch-equipment" class="btn btn-danger">View Code</a>
                 </article>  
               </div>
               <div class="col-md-6 col-xs-12">
                 <article>
                 <a href="#" class="image fit thumb"><img src="img/skyward_thumbnail.png" alt="" /></a>
                 <h3>Skyward ESL</h3>
-                <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-               <a href="#" class="btn btn-outline-danger">View Project</a>
-                <a href="#" class="btn btn-danger">View Code</a>
+                <p>Accessecible ESL and Citizenship programs for non-english speakers.</p>
+               <a href="https://georgechristopherlopez.github.io/Skyward-Esl/" class="btn btn-outline-danger">View Project</a>
+                <a href="https://github.com/GeorgeChristopherLopez/Skyward-Esl" class="btn btn-danger">View Code</a>
                 </article>  
               </div>
               <div class="col-md-6 col-xs-12">
                 <article>
                 <a href="#" class="image fit thumb"><img src="img/Fitbody_thumbnail.png" alt="" /></a>
                 <h3>Fitbody</h3>
-                <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-              <a href="#" class="btn btn-outline-danger">View Project</a>
-                <a href="#" class="btn btn-danger">View Code</a>
+                <p>Fitness programs and meal plans for the extreme.</p>
+              <a href="https://georgechristopherlopez.github.io/fitbody/" class="btn btn-outline-danger">View Project</a>
+                <a href="https://github.com/GeorgeChristopherLopez/fitbody" class="btn btn-danger">View Code</a>
                 </article>  
               </div>
               <div class="col-md-6 col-xs-12">
                 <article>
                 <a href="#" class="image fit thumb"><img src="img/alphafinancial_thumbnail.png" alt="" /></a>
                 <h3>Alpha Financial</h3>
-                <p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-               <a href="#" class="btn btn-outline-danger">View Project</a>
-                <a href="#" class="btn btn-danger">View Code</a>
+                <p>Managing wealth to achieve financial well-being</p>
+               <a href="https://georgechristopherlopez.github.io/Alpha-Financial/" class="btn btn-outline-danger">View Project</a>
+                <a href="https://github.com/GeorgeChristopherLopez/Alpha-Financial" class="btn btn-danger">View Code</a>
                 </article>  
               </div>
            </div>
