--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
             <div class="row">
                 <div class="col-md-6 col-xs-12">
                     <article class="wow fadeInLeft" data-wow-duration="2s">
-                        <a href="https://georgechristopherlopez.github.io/bolt-media/" class="image fit thumb" target="_blank"><img src="img/bolt_media_thumbnail.png" alt="" /></a>
-                        <h3>Bolt Media</h3>
-                        <p>Rasing the bar on Digital Media</p>
-                        <a href="https://georgechristopherlopez.github.io/bolt-media/" class="btn btn-outline-danger" target="_blank">View Project</a>
-                        <a href="https://github.com/GeorgeChristopherLopez/bolt-media" class="btn btn-danger" target="_blank">View Code</a>
+                        <a href="https://georgechristopherlopez.github.io/fitbody/" class="image fit thumb" target="_blank"><img src="img/Fitbody_thumbnail.png" alt="" /></a>
+                        <h3>Fitbody</h3>
+                        <p>Fitness programs and meal plans for the extreme.</p>
+                        <a href="https://georgechristopherlopez.github.io/fitbody/" class="btn btn-outline-danger" target="_blank">View Project</a>
+                        <a href="https://github.com/GeorgeChristopherLopez/fitbody" class="btn btn-danger" target="_blank">View Code</a>
                     </article>
                 </div>
                 <div class="col-md-6 col-xs-12">
@@ -148,11 +148,11 @@
                 </div>
                 <div class="col-md-6 col-xs-12">
                     <article class="wow fadeInLeft" data-wow-duration="2s">
-                        <a href="https://georgechristopherlopez.github.io/fitbody/" class="image fit thumb" target="_blank"><img src="img/Fitbody_thumbnail.png" alt="" /></a>
-                        <h3>Fitbody</h3>
-                        <p>Fitness programs and meal plans for the extreme.</p>
-                        <a href="https://georgechristopherlopez.github.io/fitbody/" class="btn btn-outline-danger" target="_blank">View Project</a>
-                        <a href="https://github.com/GeorgeChristopherLopez/fitbody" class="btn btn-danger" target="_blank">View Code</a>
+                        <a href="https://georgechristopherlopez.github.io/Skyward-Esl/" class="image fit thumb" target="_blank"><img src="img/skyward_thumbnail.png" alt="" /></a>
+                        <h3>Skyward ESL</h3>
+                        <p>ESL program and U.S Citizenship lessons for Non English speakers.</p>
+                        <a href="https://georgechristopherlopez.github.io/Skyward-Esl/" class="btn btn-outline-danger" target="_blank">View Project</a>
+                        <a href="https://github.com/GeorgeChristopherLopez/Skyward-Esl" class="btn btn-danger" target="_blank">View Code</a>
                     </article>
                 </div>
                 <div class="col-md-6 col-xs-12">
