--- a/index.html
+++ b/index.html
@@ -58,34 +58,56 @@
 
             <div class="projects-section">
                 <article class="wow fadeInRight" data-wow-duration="2s">
-                    <a href="https://georgechristopherlopez.github.io/Elite-Driving/" class="image fit thumb" target="_blank"><img src="img/elite-driving-thumbnail.png" alt="" /></a>
-                    <h3>Elite Driving</h3>
-                    <p>Making your driving, Elite.</p>
-                    <a href="https://georgechristopherlopez.github.io/Elite-Driving/" class="btn btn-outline-danger" target="_blank">View Project</a>
-                    <a href="https://github.com/GeorgeChristopherLopez/Elite-Driving" class="btn btn-danger" target="_blank">View Code</a>
+                    <div class="project">
+                        <a href="https://georgechristopherlopez.github.io/Elite-Driving/" class="image fit thumb" target="_blank"><img src="img/elite-driving-thumbnail.png" alt="" /></a>
+                    </div>
+                    <div class="description">
+                        <h3>Elite Driving</h3>
+                        <p>Making your driving, Elite.</p>
+                        <a href="https://georgechristopherlopez.github.io/Elite-Driving/" class="btn btn-outline-danger" target="_blank">View Project</a>
+                        <a href="https://github.com/GeorgeChristopherLopez/Elite-Driving" class="btn btn-danger" target="_blank">View Code</a>
+                    </div>
                 </article>
                 <article>
-                    <a href="https://georgechristopherlopez.github.io/fitbody/" class="image fit thumb" target="_blank"><img src="img/Fitbody_thumbnail.png" alt="" /></a>
-                    <h3>Fitbody</h3>
-                    <p>Fitness programs and meal plans for the extreme.</p>
-                    <a href="https://georgechristopherlopez.github.io/fitbody/" class="btn btn-outline-danger" target="_blank">View Project</a>
-                    <a href="https://github.com/GeorgeChristopherLopez/fitbody" class="btn btn-danger" target="_blank">View Code</a>
+                    <div class="description">
+                        <h3>Fitbody</h3>
+                        <p>Fitness programs and meal plans for the extreme.</p>
+                        <a href="https://georgechristopherlopez.github.io/fitbody/" class="btn btn-outline-danger" target="_blank">View Project</a>
+                        <a href="https://github.com/GeorgeChristopherLopez/fitbody" class="btn btn-danger" target="_blank">View Code</a>
+
+
+                    </div>
+                    <div class="project">
+                        <a href="https://georgechristopherlopez.github.io/fitbody/" class="image fit thumb" target="_blank"><img src="img/Fitbody_thumbnail.png" alt="" /></a>
+
+
+                    </div>
+
                 </article>
 
                 <article class="wow fadeInLeft" data-wow-duration="2s">
-                    <a href="https://georgechristopherlopez.github.io/Skyward-Esl/" class="image fit thumb" target="_blank"><img src="img/skyward_thumbnail.png" alt="" /></a>
-                    <h3>Skyward ESL</h3>
-                    <p>ESL program and U.S Citizenship lessons for Non English speakers.</p>
-                    <a href="https://georgechristopherlopez.github.io/Skyward-Esl/" class="btn btn-outline-danger" target="_blank">View Project</a>
-                    <a href="https://github.com/GeorgeChristopherLopez/Skyward-Esl" class="btn btn-danger" target="_blank">View Code</a>
+                    <div>
+                        <a href="https://georgechristopherlopez.github.io/Skyward-Esl/" class="image fit thumb" target="_blank"><img src="img/skyward_thumbnail.png" alt="" /></a>
+                    </div>
+                    <div>
+                        <h3>Skyward ESL</h3>
+                        <p>ESL program and U.S Citizenship lessons for Non English speakers.</p>
+                        <a href="https://georgechristopherlopez.github.io/Skyward-Esl/" class="btn btn-outline-danger" target="_blank">View Project</a>
+                        <a href="https://github.com/GeorgeChristopherLopez/Skyward-Esl" class="btn btn-danger" target="_blank">View Code</a>
+                    </div>
                 </article>
                 <article class="wow fadeInRight" data-wow-duration="2s">
-                    <a href="https://georgechristopherlopez.github.io/arch-equipment/" class="image fit thumb" target="_blank"><img src="img/archequipment_thumbnail.png" alt="" /></a>
-                    <h3>Arch Equipment</h3>
-                    <p>Hottest equipment for contractors and enthusiast. New and Used.</p>
-                    <a href="https://georgechristopherlopez.github.io/arch-equipment/" class="btn btn-outline-danger" target="_blank">View Project</a>
-                    <a href="https://github.com/GeorgeChristopherLopez/arch-equipment" class="btn btn-danger" target="_blank">View Code</a>
-                </article>
+                    <div>
+                        <h3>Arch Equipment</h3>
+                        <p>Hottest equipment for contractors and enthusiast. New and Used.</p>
+                        <a href="https://georgechristopherlopez.github.io/arch-equipment/" class="btn btn-outline-danger" target="_blank">View Project</a>
+                        <a href="https://github.com/GeorgeChristopherLopez/arch-equipment" class="btn btn-danger" target="_blank">View Code</a>
+
+                    </div>
+<div>
+    <a href="https://georgechristopherlopez.github.io/arch-equipment/" class="image fit thumb" target="_blank"><img src="img/archequipment_thumbnail.png" alt="" /></a>
+
+</div>                      </article>
             </div>
         </div>
         
