--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="profile-section">
                 <img class="profile" src="img/GeorgeChristopherLopez.jpg" />
                 <div id="social">
-                    <ul class="wow slideInLeft" data-wow-duration="2s">
+                    <ul class="contact-info">
                         <li><a href="mailto:georgechristopherlopez@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a></li>
 
 
