--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
 
         <div>
-            <a href="#" class="project-btn">PROJECTS</a>
+            <a href="#" class="project-btn">VIEW PROJECTS</a>
         </div>
         <div class="projects hide">
            
