--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/font-awesome.min.css">
     <link type="text/css" rel="stylesheet" href="css/styles.css" />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto&family=Roboto+Slab&display=swap" rel="stylesheet">
-   
+
     <title>George Christopher Lopez </title>
 
 </head>
@@ -88,26 +89,22 @@
             <hr />
 
             <div class="inner-footer">
-                <ul>
-                    <li>
-                        T
-                    </li>
-                    <li>
-                        G
-                    </li>
+                <ul class="contact-info">
+                    <li><a href="mailto:georgechristopherlopez@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a></li>
+
 
                     <li>
-                        L
+                        <a href="https://www.linkedin.com/in/george-christopher-lopez-b9758337/" target="_blank">
+                            <i class="fa fa-linkedin-square"></i>
+                        </a>
                     </li>
-                    <li>
-                        Cp
-                    </li>
-                    <li>
-                        E
-                    </li>
+
+                    <li><a href="https://github.com/GeorgeChristopherLopez" target="_blank"><i class="fa fa-github"></i></a></li>
+                    <li><a href="https://codepen.io/gclopez" target="_blank"><i class="fa fa-codepen"></i></a></li>
+
                 </ul>
-                <p>Resume</p>
-            </div>
+                <a href="/img/GeorgeChristopherLopezResume.pdf" download>RESUME</a>
+</div>
         </div>
 
 
