--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
                 </div>
 
                 <div class="pic">
-                    <a href="https://github.com/GeorgeChristopherLopez/flixcentral"><img src="img/flixcentral_thumbnail.png" /></a>
+                    <a href="                </div>
+                        "><img src="img/flixcentral_thumbnail.png" /></a>
                 </div>
 
             </div>
