--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
                 </div>
 
                 <div class="pic">
-                    <a href="                </div>
-                        "><img src="img/flixcentral_thumbnail.png" /></a>
+                    <a href="https://flixcentral.netlify.app/"><img src="img/flixcentral_thumbnail.png" /></a>
                 </div>
 
             </div>
