--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
 
 
     </main>
-    
+    <script>
+    window.location = "http://georgechristopherlopez.github.io/portfolio";
+    </script>
 </body>
 </html>
